--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Sons of Bane Alliance">
+    <meta name="author" content="Adalberto Ramirez">
 
+    <link rel="stylesheet" href="./css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
@@ -27,7 +30,7 @@
     </header>
 
     <footer>
-      <p>Sons of bane, Adalberto Ramirez, Copyright &copy; 2020</p>
+      <p>Sons of bane, Copyright &copy; 2020</p>
     </footer>
     
     <!-- Optional JavaScript -->
